err/flask-lint.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Lint-0.1.dev20171129.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_lint'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonlint'...
Listing './lib/python3.5/site-packages/jsonlint/locale'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ar'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ca'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/cs_CZ'...
Listing './lib/python3.5/site-packages/jsonlint/locale/cs_CZ/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/cy'...
Listing './lib/python3.5/site-packages/jsonlint/locale/cy/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/de'...
Listing './lib/python3.5/site-packages/jsonlint/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/de_CH'...
Listing './lib/python3.5/site-packages/jsonlint/locale/de_CH/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/el'...
Listing './lib/python3.5/site-packages/jsonlint/locale/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/en'...
Listing './lib/python3.5/site-packages/jsonlint/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/es'...
Listing './lib/python3.5/site-packages/jsonlint/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/et'...
Listing './lib/python3.5/site-packages/jsonlint/locale/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/fa'...
Listing './lib/python3.5/site-packages/jsonlint/locale/fa/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/fi'...
Listing './lib/python3.5/site-packages/jsonlint/locale/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/fr'...
Listing './lib/python3.5/site-packages/jsonlint/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/hu'...
Listing './lib/python3.5/site-packages/jsonlint/locale/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/it'...
Listing './lib/python3.5/site-packages/jsonlint/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ja'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ko'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/nb'...
Listing './lib/python3.5/site-packages/jsonlint/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/nl'...
Listing './lib/python3.5/site-packages/jsonlint/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/pl'...
Listing './lib/python3.5/site-packages/jsonlint/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/pt'...
Listing './lib/python3.5/site-packages/jsonlint/locale/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ru'...
Listing './lib/python3.5/site-packages/jsonlint/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/uk'...
Listing './lib/python3.5/site-packages/jsonlint/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/zh'...
Listing './lib/python3.5/site-packages/jsonlint/locale/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint/locale/zh_TW'...
Listing './lib/python3.5/site-packages/jsonlint/locale/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jsonlint-0.1.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
